# traitbac

./: Cargo.toml  README.md
files/: BACTOTRAITS_DATASET_2026-01-28_GENUSLVL.csv
src/: args.rs  class.rs  dataset.rs  family.rs  filestruct.rs  genus.rs  genusa.rs  label.rs  main.rs  order.rs  phylum.rs  rest.rs  rrdna.rs  search.rs  species.rs  speciesa.rs  taxid.rs  taxonomy.rs
