[package]
name = "traitbac"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
prettytable = "0.10.0"
prettytable-rs = "0.10.0"
rayon = "1.11.0"
sqlx = { version = "0.8.6", features = ["sqlite"] }
tch = { version = "0.23.0", features = ["download-libtorch"] }
